--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,4 +13,4 @@
   <%= button_to "Destroy this project", @project, method: :delete %>
 </div>
 
-<img src="http://clipart-library.com/clip-art/dragon-clipart-transparent-background-14.htm" class="img-fluid">
+<img src="http://clipart-library.com/images_k/dragon-clipart-transparent-background/dragon-clipart-transparent-background-14.png" class="img-fluid">
